# G4BNB_BSM_rohan

./: CMakeLists.txt
geometry/: BooNE_50m.gdml  BooNE_50m_offtarg_wires_al2O3_srbbs.gdml
include/: BooNEDecayPhysics.hh  BooNEHadronCrossSections.hh  BooNEHadronCrossSectionsMessenger.hh  BooNEHadronElasticDataSet.hh  BooNEHadronElasticPhysics.hh  BooNEHadronElasticProcess.hh  BooNEHadronInelasticDataSet.hh  BooNEHadronInelasticProcess.hh  BooNEHadronPhysics.hh  BooNEHadronQuasiElasticDataSet.hh  BooNEHadronQuasiElasticModel.hh  BooNEHadronQuasiElasticProcess.hh  BooNEHadronZeroCrossSection.hh  BooNEHadronZeroModel.hh  BooNEpBeInteraction.hh  BooNEpBeInteractionMessenger.hh  NuBeamEventAction.hh  NuBeamEventActionMessenger.hh  NuBeamGeometryConstruction.hh  NuBeamGeometryConstructionMessenger.hh  NuBeamLocalField.hh  NuBeamLocalFieldMessenger.hh  NuBeamOutput.hh  NuBeamOutputMessenger.hh  NuBeamPhysicsList.hh  NuBeamPrimaryGeneratorAction.hh  NuBeamPrimaryGeneratorActionMessenger.hh  NuBeamRunAction.hh  NuBeamRunActionMessenger.hh  NuBeamRunManager.hh  NuBeamSkinDepthField.hh  NuBeamSkinDepthFieldMessenger.hh  NuBeamStackingAction.hh  NuBeamSteppingAction.hh  NuBeamSteppingActionMessenger.hh  NuBeamTrackInformation.hh  NuBeamTrackingAction.hh  NuBeamTrackingActionMessenger.hh  NuBeamTrajectory.hh
input/: production.in  vis.in
physics/: G4DEFAULT.hh  GFLUKAData.hh  MARSData.hh  SWParData.hh  ZGSData.hh
scripts/: CMakeLists.txt  beamHist.cc  compare.py  mergeHist.py  setup_g4101.sh  setup_g4102.sh  setup_g4104.sh  submitBeam.py
src/: BooNEDecayPhysics.cc  BooNEHadronCrossSections.cc  BooNEHadronCrossSectionsMessenger.cc  BooNEHadronElasticDataSet.cc  BooNEHadronElasticPhysics.cc  BooNEHadronElasticProcess.cc  BooNEHadronInelasticDataSet.cc  BooNEHadronInelasticProcess.cc  BooNEHadronPhysics.cc  BooNEHadronQuasiElasticModel.cc  BooNEpBeInteraction.cc  BooNEpBeInteractionMessenger.cc  CMakeLists.txt  NuBeam.cc  NuBeamEventAction.cc  NuBeamEventActionMessenger.cc  NuBeamGeometryConstruction.cc  NuBeamGeometryConstructionMessenger.cc  NuBeamLocalField.cc  NuBeamLocalFieldMessenger.cc  NuBeamOutput.cc  NuBeamOutputMessenger.cc  NuBeamPhysicsList.cc  NuBeamPrimaryGeneratorAction.cc  NuBeamPrimaryGeneratorActionMessenger.cc  NuBeamRunAction.cc  NuBeamRunActionMessenger.cc  NuBeamRunManager.cc  NuBeamSkinDepthField.cc  NuBeamSkinDepthFieldMessenger.cc  NuBeamStackingAction.cc  NuBeamSteppingAction.cc  NuBeamSteppingActionMessenger.cc  NuBeamTrackInformation.cc  NuBeamTrackingAction.cc  NuBeamTrackingActionMessenger.cc  NuBeamTrajectory.cc
validation/: april07_baseline_rgen610.6_fixrnd_20171212.root  april07_baseline_rgen610.6_flux.root
